--- a/css/main.css
+++ b/css/main.css
@@ -209,13 +209,6 @@
   }
   /* //Worksgops */
   /* Clients */
-  .legent__item:hover {
-    color: #5C5DF7;
-    text-shadow: 0.1px 0px 0px #5C5DF7;
-  }
-  .legent__item:hover::before {
-    background-color: #5C5DF7;
-  }
   .region__item:hover {
     color: #5C5DF7;
     text-shadow: 0.1px 0px 0px #5C5DF7;
@@ -1443,7 +1436,7 @@ body {
   height: 150px;
   background-color: #F0F0FA;
   border-radius: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   position: relative;
   overflow: hidden;
   background: #FFFFFF;
@@ -1566,7 +1559,7 @@ body {
 .trust-us__company__list {
   margin-top: 50px;
   display: flex;
-  justify-content: space-between;
+  align-items: flex-start;
   flex-wrap: wrap;
   margin-right: -40px;
 }
@@ -1960,30 +1953,61 @@ body {
   left: 0px;
   right: 0px;
   z-index: 1;
+  cursor: pointer;
 }
 .manufacturing__chart-list {
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
+  justify-content: space-between;
   max-height: 580px;
 }
 .manufacturing-hover-elem {
   position: absolute;
   pointer-events: none;
-  color: #5C5DF7;
+  color: #3C4153;
   font-weight: 700;
   opacity: 0;
 }
-.manufacturing-hover-elem p::after {
+.manufacturing-hover-active::after {
   content: "%";
 }
+.manufacturing-hover-active::before {
+  content: "";
+  position: absolute;
+  left: -12px;
+  bottom: 2px;
+  width: 45px;
+  height: 13px;
+  background: url(../img/diagram-decor.png) center / cover no-repeat;
+}
+.legent__list {
+  max-width: 300px;
+  width: 100%;
+}
 .legent__item {
-  width: 50%;
+  display: flex;
   margin-bottom: 16px;
   padding-left: 24px;
   position: relative;
   cursor: pointer;
   transition: color 0.4s, text-shadow 0.4s;
+}
+.legent__item.active {
+  color: #5C5DF7;
+  text-shadow: 0.1px 0px 0px #5C5DF7;
+}
+.legent__item.active .icon-drop {
+  opacity: 1;
+}
+.legent__item.active::before {
+  background-color: #5C5DF7;
+}
+.legent__item .icon-drop {
+  order: 2;
+  font-size: 8px;
+  transform: rotate(-90deg);
+  margin-left: 10px;
+  opacity: 0;
+  transition: opacity 0.4s;
 }
 .legent__item:nth-child(6n) {
   margin-bottom: 56px;
@@ -3109,12 +3133,9 @@ body {
   margin-top: 40px;
 }
 .contacts__info {
-  width: calc(50% - 22px);
+  width: calc(50% - 150px);
   display: flex;
   justify-content: space-between;
-}
-.contacts__list {
-  max-width: 255px;
 }
 .contacts__item {
   display: flex;
@@ -3138,6 +3159,9 @@ body {
 }
 .contacts__item__descrip:last-child {
   margin-bottom: 0px;
+}
+.contacts__item__descrip-mail {
+  text-decoration: underline;
 }
 .clients-callback__wrapper-contact {
   width: calc(50% - 22px);
@@ -3394,7 +3418,7 @@ body {
   line-height: 21px;
 }
 .footer-contact {
-  max-width: 430px;
+  max-width: 530px;
 }
 .footer-contact__list {
   display: flex;
@@ -3406,11 +3430,11 @@ body {
   line-height: 21px;
 }
 .footer-contact__item {
-  width: 60%;
+  width: 35%;
   margin-bottom: 10px;
 }
 .footer-contact__item:nth-child(2n) {
-  width: 40%;
+  width: 65%;
 }
 .footer-contact__item a {
   font-weight: 700;
@@ -4017,7 +4041,6 @@ body {
     margin: 43px 0px 20px;
   }
   .corporate-topic__item {
-    margin-bottom: 20px;
     height: 163px;
   }
   .topic__main-info {
@@ -4072,6 +4095,7 @@ body {
   .trust-us__company__item .img {
     padding: 0px 11px;
     height: 62px;
+    flex-shrink: 0;
   }
   .trust-us__list {
     margin-top: 80px;
@@ -4193,6 +4217,14 @@ body {
   }
   .calendar__slider__button {
     top: 20px;
+    width: 40px;
+    height: 40px;
+  }
+  .calendar__slider__button-right {
+    right: -45px;
+  }
+  .calendar__slider__button-left {
+    left: -45px;
   }
   /* Calendar */
   /* Full events */
@@ -4309,13 +4341,7 @@ body {
     margin-top: 30px;
   }
   .contacts__info {
-    flex-direction: column;
-  }
-  .contacts__list {
-    margin-bottom: 30px;
-  }
-  .contacts__list:last-child {
-    margin-bottom: 0px;
+    width: calc(50% - 22px);
   }
   /* Contacts */
   /* Clients callback */
@@ -4616,13 +4642,11 @@ body {
     margin-top: 10px;
   }
   .trust-us__company__list {
-    margin: 20px 0px -20px 0px;
+    margin: 20px -20px -20px 0px;
     flex-wrap: wrap;
   }
   .trust-us__company__item {
-    width: calc(50% - 10px);
-    height: 75px;
-    margin-right: 0px;
+    width: calc(25% - 20px);
     margin-bottom: 20px;
   }
   .trust-us__list {
@@ -4836,6 +4860,8 @@ body {
   }
   .calendar__slider__button {
     position: static;
+    width: 48px;
+    height: 48px;
   }
   .calendar__slider__button:first-child {
     margin-right: 20px;
@@ -5183,6 +5209,10 @@ body {
     margin-bottom: 28px;
   }
   /* //About us */
+  /* Trust us */
+  .trust-us__company__item {
+    width: calc(50% - 20px);
+  }
 }
 @media (max-width: 1210px) {
   /* Footer */
@@ -5208,13 +5238,18 @@ body {
     margin-right: 20px;
   }
   .footer-contact__list {
-    margin-bottom: 44px;
+    margin-bottom: 20px;
+    flex-direction: column;
+    max-height: initial;
   }
   .footer-contact__item {
-    width: 50%;
+    width: 100%;
+  }
+  .footer-contact__item:last-child {
+    margin-bottom: 0px;
   }
   .footer-contact__item:nth-child(2n) {
-    width: 50%;
+    width: 100%;
   }
   .footer-id-company {
     width: 100%;
@@ -5226,35 +5261,25 @@ body {
 @media (max-width: 767px) {
   /* Footer */
   .footer__wrapper {
-    padding-top: 25px;
-    padding-bottom: 90px;
+    padding-top: 20px;
+    padding-bottom: 80px;
     flex-direction: column;
     position: relative;
   }
-  .footer-contact__list {
-    max-height: 100%;
-    margin: 16px 0px 24px;
-  }
-  .footer-contact__item {
+  .footer-contact {
     width: 100%;
-  }
-  .footer-contact__item:nth-child(2n) {
-    width: 100%;
-  }
-  .footer-contact__item:nth-child(2) {
-    margin-bottom: 24px;
   }
   .footer-id-company {
     width: calc(100% - 40px);
     position: absolute;
     left: 20px;
-    bottom: 24px;
+    bottom: 20px;
   }
   .footer-social {
     width: 100%;
   }
   .footer-copyright {
-    padding: 24px 0px;
+    padding: 20px 0px;
   }
   .footer-copyright__wrapper {
     flex-direction: column;
