--- a/css/autoprefixer/main.css
+++ b/css/autoprefixer/main.css
@@ -217,13 +217,6 @@
   }
   /* //Worksgops */
   /* Clients */
-  .legent__item:hover {
-    color: #5C5DF7;
-    text-shadow: 0.1px 0px 0px #5C5DF7;
-  }
-  .legent__item:hover::before {
-    background-color: #5C5DF7;
-  }
   .region__item:hover {
     color: #5C5DF7;
     text-shadow: 0.1px 0px 0px #5C5DF7;
@@ -2465,6 +2458,7 @@ body {
 .manufacturing__wrapper {
   position: relative;
   min-height: 365px;
+  margin-top: 30px;
 }
 .canvas__wrapper {
   width: 365px;
@@ -2512,6 +2506,13 @@ body {
   -webkit-transition: color 0.4s, text-shadow 0.4s;
   transition: color 0.4s, text-shadow 0.4s;
 }
+.legent__item.active {
+  color: #5C5DF7;
+  text-shadow: 0.1px 0px 0px #5C5DF7;
+}
+.legent__item.active::before {
+  background-color: #5C5DF7;
+}
 .legent__item:nth-child(6n) {
   margin-bottom: 56px;
 }
@@ -2545,6 +2546,7 @@ body {
   -ms-flex-pack: justify;
   justify-content: space-between;
   margin-bottom: 150px;
+  margin-top: 30px;
 }
 .map-ukraine__wrapper .svg-map {
   height: 385px;
@@ -5448,7 +5450,6 @@ body {
   }
   .manufacturing__tablet {
     display: block;
-    margin-top: 30px;
   }
   .manufacturing__list {
     display: -webkit-box;
@@ -5940,7 +5941,10 @@ body {
   .manufacturing {
     margin-bottom: 50px;
   }
-  .manufacturing__tablet {
+  .manufacturing__wrapper {
+    margin-top: 20px;
+  }
+  .map-ukraine__wrapper {
     margin-top: 20px;
   }
   .our-clients .trust-us__list {
