--- a/less/_footer-media.less
+++ b/less/_footer-media.less
@@ -32,14 +32,20 @@
     }
     
     .footer-contact__list {
-        margin-bottom: 44px;
+        margin-bottom: 20px;
+        flex-direction: column;
+        max-height: initial;
     }
     
     .footer-contact__item {
-        width: 50%;
+        width: 100%;
+        
+        &:last-child {
+            margin-bottom: 0px;
+        }
         
         &:nth-child(2n) {
-            width: 50%;
+            width: 100%;
         }
     }
     
@@ -57,34 +63,21 @@
     /* Footer */
     
     .footer__wrapper {
-        padding-top: 25px;
-        padding-bottom: 90px;
+        padding-top: 20px;
+        padding-bottom: 80px;
         flex-direction: column;
         position: relative;
     }
     
-    .footer-contact__list {
-        max-height: 100%;
-        margin: 16px 0px 24px;
-    }
-    
-    .footer-contact__item {
+    .footer-contact {
         width: 100%;
-        
-        &:nth-child(2n) {
-            width: 100%;
-        }
-        
-        &:nth-child(2) {
-            margin-bottom: 24px;
-        }
     }
     
     .footer-id-company {
         width: calc(100% - 40px);
         position: absolute;
         left: 20px;
-        bottom: 24px;
+        bottom: 20px;
     }
     
     .footer-social {
@@ -92,7 +85,7 @@
     }
     
     .footer-copyright {
-        padding: 24px 0px;
+        padding: 20px 0px;
     }
     
     .footer-copyright__wrapper {
