--- a/css/main.css
+++ b/css/main.css
@@ -4396,7 +4396,21 @@ body {
     border-radius: 20px;
     padding: 10px 20px;
   }
+  .pie-chart {
+    fill: none;
+    stroke-width: 13;
+    stroke: #F0F0FA;
+  }
+  .pie-chart-value {
+    overflow: hidden;
+  }
+  .pie-chart-value.active {
+    stroke: #5C5DF7;
+  }
   .manufacturing__statistics {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-right: 15px;
     max-width: 45px;
     color: #5C5DF7;
@@ -4404,14 +4418,19 @@ body {
     line-height: 150%;
     font-weight: 700;
   }
+  .manufacturing__info {
+    display: flex;
+    flex-direction: column;
+  }
   .manufacturing__info .name {
     font-size: 16px;
     line-height: 130%;
     font-weight: 400;
+    margin-bottom: auto;
   }
   .manufacturing__info .general-more {
     display: block;
-    margin-top: 25px;
+    margin-top: 8px;
     text-transform: initial;
     font-size: 14px;
     line-height: 130%;
