--- a/less/_hover.less
+++ b/less/_hover.less
@@ -139,6 +139,19 @@
     
     /* //Worksgops */
     
+    /* Annoncements */
+    
+    .announcements-slider__wrapper {
+        &:hover {
+            .announcements__item-all {
+                opacity: 1;
+                transition: opacity .4s .2s;
+            }
+        }
+    }
+    
+    /* /Annoncements */
+    
     /* Clients */
     
     .region__item {
