--- a/less/_main-block-media.less
+++ b/less/_main-block-media.less
@@ -36,6 +36,20 @@
         padding: 20px;
     }
     
+    .announcements__list-slider {
+        transform: translateX(0px) !important;
+        margin-left: 0px;
+        width: 100%;
+        
+        &::after {
+            margin-left: 0px;
+        }
+    }
+    
+    .announcements__item-all {
+        opacity: 1;
+    }
+    
     
     /* //Annoncements */
 }
@@ -103,6 +117,11 @@
         width: 215px;
         height: 120px;
         padding: 20px;
+        margin-right: 20px;
+    }
+    
+    .announcements__item-all {
+        width: 120px;
     }
     
     .announcements__theme {
@@ -209,10 +228,17 @@
     
     .corporate-calc__list {
         flex-direction: column;
+        margin-right: 0px;
     }
     
     .corporate-calc__item {
+        width: 100%;
+        margin-right: 0px;
         margin-bottom: 30px;
+        
+        .name {
+            margin-bottom: 11px;
+        }
         
         &:last-child {
             margin-bottom: 0px;
@@ -436,13 +462,7 @@
         }
     }
     
-    .notyfication-subscription__list {
-        flex-direction: column;
-    }
     
-    .notyfication-subscription__item  {
-        width: 100%;
-    }
     /* /Notyfication block */
     
     /* Important-to-us*/
@@ -606,6 +626,10 @@
     
     .faq {
         margin-bottom: 50px;
+    }
+    
+    .faq__list {
+        margin-bottom: 100px;
     }
     
     .faq__container {
@@ -778,6 +802,14 @@
         padding: 10px 20px;
     }
     
+    .manufacturing__map-img {
+        width: 40px;
+        height: 40px;
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    
     .pie-chart {
         fill: none;
         stroke-width:13;
@@ -802,6 +834,10 @@
         font-size: 11px;
         line-height: 150%;
         font-weight: 700;
+        
+        .number {
+            margin-bottom: 2px;
+        }
     }
     
     .manufacturing__info {
@@ -848,7 +884,19 @@
         }
     }
     
+    .catalog__buttons__container {
+        margin-top: 40px;
+    }
+    
     /* //Catalog */
+    
+    /* Corporative */
+    
+    .main-info__wrapper-corporate-topics {
+        margin-bottom: 100px;
+    }
+    
+    /* //Corporative */
 }
 
 
@@ -915,11 +963,20 @@
         }
     }
     
+    .announcements__list-slider {
+        padding: 0px 20px;
+    }
+    
     .announcements__item {
         width: calc(50% - 10px);
+        height: 90px;
         margin-right: 0px;
         margin-bottom: 20px;
         padding: 10px;
+    }
+    
+    .announcements__item-all {
+        order: 50;
     }
 
     .workshops__list {
@@ -1262,6 +1319,13 @@
     
     .notyfication__list {
         width: 100%;
+        flex-direction: column;
+    }
+    
+    .notyfication__item {
+        margin-bottom: 20px;
+        width: 100%;
+        margin-right: 0px;
     }
     
     .notyfication-subscription {
@@ -1640,16 +1704,11 @@
         
     /* Faq */
     
-    .faq__container {
-        flex-direction: column;
-    }
-    
     .faq__list {
-        width: 100%;
+        margin-bottom: 50px;
     }
     
     .ask-qustion__container {
-        width: 100%;
         padding: 0px;
         margin-top: 50px;
         box-shadow: none;
@@ -1691,108 +1750,26 @@
         }
     }
     
-    .catalog__buttons {
-        position: relative;
-        
-        > .filter__wrapper {
-            max-width: calc(100% - 55px);
-            z-index: 5;
-        }
-    }
-    
     .catalog__buttons__container {
-        
-        .filter__wrapper {
-            position: absolute;
-            top: 0px;
-            right: 0px;
-            width: 47px;
-            
-            &.active {
-                .filter-button {
-                    &::before {
-                        opacity: 0;
-                        transform: translateX(20px)
-                    }
-                    
-                    .decor-elem {
-                        &::before {
-                            transform: rotate(45deg) translate(2px, 3px);
-                        }
-                        
-                        &::after {
-                            width: 18px;
-                            transform: rotate(-45deg) translate(3px, -4px);
-                        }
-                    }
-                }
-            }
-        }
-        
-        .filter__list {
-            width: calc(100vw - 40px);
-            left: calc(-100vw + 90px);
-        }
-        
-        .filter-button {
-            font-size: 0px;
-            width: 47px;
-            height: 47px;
-            border-radius: 50%;
-            box-shadow: 0px 4px 15px rgba(200, 204, 218, 0.2);
-            padding: 0px;
-            position: relative;
-            
-            &::before {
-                content: "";
-                position: absolute;
-                top: 50%;
-                left: 15px;
-                width: 12px;
-                height: 1px;
-                background-color: #3C4153;
-                transition: opacity .4s, transform .4s;
-            }
-            
-            .icon-drop {
-                display: none;
-            }
-            
-            .decor-elem {
-                display: block;
-                width: 18px;
-                height: 10px;
-                position: absolute;
-                left: 50%;
-                top: 50%;
-                transform: translate(-50%, -50%);
-                
-                &::before,
-                &::after {
-                    content: "";
-                    position: absolute;
-                    top: 0px;
-                    left: 0px;
-                    width: 18px;
-                    height: 1px;
-                    background-color: #3C4153;
-                    transition: transform .4s, width .4s;
-                }
-                
-                &::after {
-                    top: auto;
-                    bottom: 0px;
-                    width: 6px;
-                }
-            }
-        }
-    }
-    
-    .filter__caption {
-        display: none;
+        margin-top: 20px;
     }
     
     /* //Catalog */
+    
+    /* Corporative */
+    
+    .main-info__wrapper-corporate-topics {
+        margin-bottom: 50px;
+    }
+    
+    .clients-callback-corporate {
+        .main_button-color {
+            max-width: 100%;
+            margin: 20px auto 0px;
+        }
+    }
+    
+    /* //Corporative */
 }
 
 @media screen and (max-width: 576px) {
@@ -1809,6 +1786,10 @@
     
     /* Annoncements */
     
+    .announcements__item {
+        height: 75px;
+    }
+    
     .position-wrapper {
         .workshops__list {
             max-width: 320px;
@@ -1824,7 +1805,7 @@
     
     .announcements__theme {
         font-size: 16px;
-        line-height: 130%;
+        line-height: 14px;
     }
     
     
@@ -1851,6 +1832,10 @@
     
     /* Notyfication */
     
+    .notyfication-subscription__list {
+        flex-direction: column;
+    }
+
     .notyfication-subscription__item {
         width: 100%;
     }
@@ -1913,5 +1898,19 @@
     
     .trust-us__company__item {
         width: calc(50% - 20px);
+    }
+    
+    /* //Trust us */
+    
+    /* Catalog */
+    
+    .catalog__buttons__container {
+        flex-direction: column;
+        align-items: flex-start;
+        
+        .filter__wrapper {
+            order: 3;
+            margin-top: 20px;
+        }
     }
 }
