--- a/less/_main-block.less
+++ b/less/_main-block.less
@@ -115,6 +115,24 @@
     z-index: 1;
 }
 
+
+.announcements-slider__wrapper {
+    padding-left: calc((100vw - 1200px) / 2);
+    cursor: move;
+}
+
+
+.announcements__list-slider {
+    transform: translateX(-180px);
+}
+
+.announcements__item-all {
+    background-color: #3C4153;
+    width: 150px;
+    opacity: 0;
+    transition: opacity .4s;
+}
+
 .workshops__list {
     display: flex;
     flex-wrap: wrap;
@@ -297,6 +315,7 @@
     visibility: hidden;
     opacity: 0;
     transition: opacity .4s, visibility 0s .4s;
+    z-index: 1;
     
     &::before {
         content: "";
@@ -407,13 +426,41 @@
 }
 
 .corporate-calc__input {
-    width: calc(25% - 22px);
+    width: calc(25% - 15px);
 }
 
 .corporate-calc__list {
     display: flex;
     justify-content: space-between;
-    width: calc(75% - 22px);
+    width: calc(75% - 15px);
+    margin-right: -30px;
+}
+
+.corporate-calc__item {
+    width: calc(33.333% - 30px);
+    margin-right: 30px;
+    
+    .name {
+        margin-bottom: 20px;
+    }
+}
+
+.range-slider__wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.range-slider {
+    width: calc(100% - 10px);
+    margin-left: 7px;
+}
+
+.range-slider__value {
+    width: 24px;
+    text-align: center;
+    margin-left: 10px;
+    color: #5C5DF7;
+    font-weight: 700;
 }
 
 .corporate-calc__footer {
@@ -834,21 +881,20 @@
 }
 
 .notyfication__form {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 32px;
+    margin-top: 55px;
 }
 
 .notyfication__list {
-    width: calc(50% - 15px);
+    display: flex;
+    margin-right: -30px;
 }
 
 .notyfication__item {
     display: flex;
     align-items: center;
-    margin-bottom: 30px;
     position: relative;
+    width: calc(33.333% - 30px);
+    margin-right: 30px;
     cursor: pointer;
     
     .noty-radio {
@@ -882,11 +928,11 @@
 .notyfication__info {
     font-size: 14px;
     line-height: 140%;
-    align-self: flex-start;
     transition: color .4s;
     
     h5 {
         font-size: 14px;
+        margin-bottom: 7px;
     }
 }
 
@@ -903,16 +949,19 @@
 
 
 .notyfication-subscription {
-    width: calc(50% - 15px);
+    max-width: 586px;
+    width: 100%;
     padding: 30px;
     background: #FFFFFF;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
     border-radius: 30px;
+    margin: 50px auto 0px;
 }
 
 .notyfication-subscription__caption {
     font-size: 16px;
     line-height: 150%;
+    text-align: center;
 }
 
 .notyfication-subscription__list {
@@ -1222,8 +1271,8 @@
     margin-top: 30px;
     
     .svg-map {
-        height: 385px;
-        width: 540px;
+        height: 370px;
+        width: 550px;
         position: relative;
     }
     
@@ -1246,6 +1295,12 @@
     color: #fff;
     text-shadow: 1px 0px 0px #ccc;
     cursor: pointer;
+}
+
+.region__wrapper {
+    max-width: 550px;
+    width: 100%;
+    margin-left: 50px;
 }
 
 .region-caption {
@@ -1747,11 +1802,6 @@
     }
 }
 
-.event-page__date {
-    font-size: 18px;
-    line-height: 135%;
-    margin-bottom: 16px;
-}
 
 .event-page__container {
     position: relative;
@@ -1773,24 +1823,38 @@
 .event-page__img {
     width: 100%;
     object-fit: cover;
-    height: 495px;
+    height: 380px;
 }
 
 .event-page__sort-info {
     display: flex;
     justify-content: space-between;
-    position: absolute;
-    right: 0px;
-    bottom: 0px;
     background-color: #FFFFFF;
-    padding: 30px;
-    max-width: 600px;
-    width: 100%;
+    padding: 30px 70px 30px 0px;
 }
 
 .event-page__sort-info__item {
     font-size: 18px;
     line-height: 135%;
+    padding-left: 40px;
+    position: relative;
+    
+    &:first-child {
+        &::before {
+            display: none;
+        }
+    }
+    
+    &::before {
+        content: "";
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        height: 100%;
+        width: 1px;
+        background: #F0F0FA;
+        border-radius: 1px;
+    }
     
     .type {
         font-size: 14px;
@@ -1803,19 +1867,29 @@
     display: flex;
     align-items: center;
     font-weight: 700;
+    position: relative;
     
     .price {
-        font-size: 24px;
-        line-height: 35px;
-        color: #0009F7;
+        font-size: 20px;
+        line-height: 29px;
+        color: #EB5757;
         
         + .old-price {
-            font-size: 18px;
-            line-height: 27px;
+            font-size: 14px;
+            line-height: 21px;
             order: -1;
             text-decoration: line-through;
             color: #4F4F4F;
             margin-right: 18px;
+            color: #5A627C;
+        }
+    }
+    
+    &.active {
+        .info-drop {
+            opacity: 1;
+            visibility: visible;
+            transition: opacity 0.4s, visibility 0s 0s;
         }
     }
 }
@@ -2305,13 +2379,12 @@
 }
 
 .faq__container {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 40px;
+    max-width: 570px;
+    margin: 40px auto 0px;
 }
 
 .faq__list {
-    width: calc(50% - 25px);
+    margin-bottom: 150px;
 }
 
 .faq__item {
@@ -2338,6 +2411,10 @@
         .faq__answer {
             display: block;
             animation: faq-show .4s;
+        }
+        
+        .icon-drop {
+            transform: rotate(180deg);
         }
     }
 }
@@ -2387,7 +2464,6 @@
 }
 
 .ask-qustion__container {
-    width: calc(50% - 25px);
     background: #FFFFFF;
     box-shadow: 0px 0px 4px rgba(60, 65, 83, 0.1);
     border-radius: 30px;
@@ -2805,10 +2881,9 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    margin-top: 30px;
+    margin-top: 50px;
     
     .filter__wrapper {
-        flex-direction: column;
         position: relative;
         z-index: 4;
         width: 255px;
@@ -2832,13 +2907,8 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width: 100%;
-        padding: 0px 20px;
-        height: 47px;
-        background-color: #fff;
-        border-radius: 30px;
         font-weight: 700;
-        box-shadow: 0px 4px 15px rgba(200, 204, 218, 0.2);
+        margin-left: 5px;
         transition: color .4s;
         
         .icon-drop {
@@ -2846,24 +2916,28 @@
             transition: transform .4s;
         }
         
-        .decor-elem {
-            display: none;
+        .text {
+            width: 145px;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            padding-right: 5px;
         }
     }
 
     .filter__list {
         flex-direction: column;
         position: absolute;
-        left: 0px;
+        right: 0px;
         margin: 0px;
         top: calc(100% + 7px);
         width: 100%;
         padding: 20px;
         background: #FFFFFF;
-        border-radius: 30px;
+        border-radius: 20px;
         z-index: -1;
         overflow: auto;
-        box-shadow: 0px 4px 15px rgba(200, 204, 218, 0.2);
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
         opacity: 0;
         visibility: hidden;
         transition: opacity .4s, visibility 0s .4s;
@@ -2888,8 +2962,29 @@
     }
 }
 
+
 .filter__caption {
-    font-size: 14px;
-    line-height: 21px;
-    margin-bottom: 7px;
+    font-size: 16px;
+    line-height: 24px;
 }
+
+/* //Filter */
+
+/* Corporative */
+
+.main-info__wrapper-corporate-topics {
+    margin-bottom: 150px;
+    
+    .main-info__list {
+        margin-top: 30px;
+    }
+}
+
+.clients-callback-corporate {
+    .main_button-color {
+        max-width: 270px;
+        margin: 30px auto 0px;
+    }
+}
+
+/* //Corporative */
