--- a/less/_general-style.less
+++ b/less/_general-style.less
@@ -512,8 +512,8 @@ body {
     width: 52px;
     height: 52px;
     border-radius: 50%;
-    border: 1px solid #F9F6F6;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    border: 1px solid #BDBDBD;
+    transition: color .4s, border-color .4s;
 }
     
 /* Filter */
