--- a/less/_hover.less
+++ b/less/_hover.less
@@ -55,7 +55,7 @@
     .slider-button {
         &:hover {
             color: #0009F7;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            border-color: #0009F7;
         }
     }
     
@@ -151,6 +151,14 @@
     }
     
     /* /Annoncements */
+    
+    /* Photo gallery */
+    
+    .photo-gallery__item__img {
+        &:hover {
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+        }
+    }
     
     /* Clients */
     
