--- a/css/main.css
+++ b/css/main.css
@@ -45,15 +45,12 @@
 }
 .icon-print:before {
   content: "\e917";
-  color: #fff;
 }
 .icon-pdf:before {
   content: "\e918";
-  color: #fff;
 }
 .icon-doc:before {
   content: "\e919";
-  color: #fff;
 }
 .icon-download:before {
   content: "\e916";
@@ -161,7 +158,7 @@
   .main-button-shadow:hover,
   .slider-button:hover {
     color: #0009F7;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    border-color: #0009F7;
   }
   .main_button:hover {
     background-color: #FAFAFF;
@@ -214,6 +211,10 @@
     transition: opacity 0.4s 0.2s;
   }
   /* /Annoncements */
+  /* Photo gallery */
+  .photo-gallery__item__img:hover {
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  }
   /* Clients */
   .region__item:hover {
     color: #5C5DF7;
@@ -741,8 +742,8 @@ body {
   width: 52px;
   height: 52px;
   border-radius: 50%;
-  border: 1px solid #F9F6F6;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  border: 1px solid #BDBDBD;
+  transition: color 0.4s, border-color 0.4s;
 }
 /* Filter */
 .filter__wrapper {
@@ -2219,6 +2220,9 @@ body {
   line-height: 18px;
   text-align: center;
 }
+.calendar__table__item.active {
+  color: #0009F7;
+}
 .calendar__table__item-disabled {
   color: #C1C7DD;
   pointer-events: none;
@@ -2501,7 +2505,11 @@ body {
 }
 .event-page__container {
   position: relative;
-  margin-bottom: 80px;
+  margin-bottom: 75px;
+}
+.event-page__container .main_button-color {
+  margin: 20px auto 0px;
+  max-width: 250px;
 }
 .about-event__text {
   margin-top: 25px;
@@ -2564,7 +2572,7 @@ body {
   order: -1;
   text-decoration: line-through;
   color: #4F4F4F;
-  margin-right: 18px;
+  margin-right: 5px;
   color: #5A627C;
 }
 .event-page__price.active .info-drop {
@@ -2574,42 +2582,43 @@ body {
 }
 .about-teacher {
   display: flex;
-  align-items: center;
-  margin-top: 32px;
+  margin-top: 30px;
   max-width: 600px;
 }
 .about-teacher__info {
-  margin-left: 16px;
+  margin-left: 20px;
   font-size: 16px;
   line-height: 150%;
 }
 .about-teacher__name {
-  margin-bottom: 8px;
+  font-size: 16px;
+  margin-bottom: 15px;
 }
 .about-teacher__sub {
-  margin-bottom: 9px;
+  line-height: 130%;
+  margin-bottom: 10px;
 }
 /* Program event */
 .program-event {
-  margin-top: 150px;
+  margin-top: 75px;
 }
 .program-event__container {
   display: flex;
   margin-top: 40px;
 }
+.program-event__calendar {
+  max-width: 290px;
+}
 .program-event__calendar-info {
-  margin-top: 32px;
-  line-height: 150%;
+  margin-top: 30px;
 }
 .program-event__calendar-info .date {
   font-size: 18px;
   color: #0009F7;
-  margin-bottom: 8px;
+  margin-bottom: 20px;
 }
 .program-event__description-item {
   display: flex;
-  align-items: center;
-  font-size: 16px;
   margin-bottom: 16px;
 }
 .program-event__description-item:last-child {
@@ -2617,34 +2626,31 @@ body {
 }
 .program-event__description-item .type {
   margin-right: 16px;
+  white-space: nowrap;
 }
 .program-event__info {
-  max-width: 750px;
-  margin-left: 30px;
-}
-.program-event__list {
+  max-width: 790px;
+  margin-left: 50px;
   padding-left: 30px;
   border-left: 1px solid #C1C7DD;
 }
 .program-event__item {
-  font-size: 16px;
-  line-height: 150%;
-  margin-bottom: 24px;
+  margin-bottom: 30px;
 }
 .program-event__item:last-child {
   margin-bottom: 0px;
 }
 .program-event__item h5 {
-  margin-bottom: 8px;
+  margin-bottom: 10px;
   font-size: 16px;
-  line-height: 140%;
+  line-height: 150%;
 }
 .program-event__item ul {
-  margin-top: 24px 0px;
+  margin: 20px 0px 30px;
 }
 .program-event__item ul li {
-  padding-left: 24px;
-  margin-bottom: 24px;
+  padding-left: 18px;
+  margin-bottom: 10px;
   position: relative;
 }
 .program-event__item ul li:last-child {
@@ -2654,38 +2660,43 @@ body {
   content: "";
   position: absolute;
   left: 0px;
-  top: 5px;
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
+  top: 8px;
+  width: 6px;
+  height: 6px;
   background-color: #5C5DF7;
 }
 .program-event__buttons {
   display: flex;
   justify-content: space-between;
-  margin-top: 55px;
+  margin-top: 40px;
 }
-.program-event__buttons .main_button-color {
-  max-width: 240px;
-  text-decoration: none;
+.program-event__buttons .main-button-shadow {
+  max-width: 236px;
 }
 .program-event__buttons .icon {
-  padding-right: 8px;
+  padding-right: 10px;
 }
 /* Program event */
 /* Event-page receive */
 .event-page__receive {
   margin-top: 150px;
 }
-.event-page__receive__list {
+.event-page__receive__container {
   display: flex;
-  margin-top: 72px;
-  margin-right: -30px;
+  align-items: center;
+  margin-top: 30px;
+}
+.event-page__receive__list {
+  margin-top: 20px;
+  width: 50%;
+  flex-shrink: 0;
 }
 .event-page__receive__item {
   display: flex;
-  width: calc(33.333% - 30px);
-  margin-right: 30px;
+  margin-bottom: 40px;
+}
+.event-page__receive__item:last-child {
+  margin-bottom: 0px;
 }
 .receive__img {
   width: 65px;
@@ -2696,54 +2707,21 @@ body {
   flex-shrink: 0;
 }
 .event-page__receive__info {
-  margin-left: 16px;
+  margin-left: 20px;
 }
 .event-page__receive__info .type {
   font-size: 16px;
+  line-height: 130%;
   margin-bottom: 8px;
 }
-.event-page__receive__description {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 55px;
-}
-.receive__description__list {
-  width: calc(50% - 15px);
-}
-.receive__description__item {
-  padding-left: 24px;
-  margin-bottom: 32px;
-  position: relative;
-}
-.receive__description__item:last-child {
-  margin-bottom: 0px;
-}
-.receive__description__item::before {
-  content: "";
-  position: absolute;
-  left: 0px;
-  top: 5px;
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  background-color: #5C5DF7;
-}
-.receive__description__info {
-  width: calc(50% - 15px);
-  background: #FFFFFF;
-  border-radius: 30px;
-  padding: 30px;
-}
-.receive__description__info .receive__img {
-  margin-bottom: 16px;
-}
-.receive__description__info p {
-  margin-bottom: 10px;
-}
-.receive__description__info p:last-child {
-  margin-top: 20px;
-  margin-bottom: 0px;
+.event-page__receive__img {
+  width: 680px;
+  height: 439px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-left: 50px;
+  flex-shrink: 0;
 }
 /* //Event page receive */
 /* Event page timer */
@@ -2794,97 +2772,64 @@ body {
   color: #7884AC;
 }
 /* //Event page timer */
-/* Event page more offers */
-.event-more-offers {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 150px;
-  padding: 55px;
-  border-radius: 30px;
-  background-color: #F0F0FA;
-}
-.event-more-offers__description {
-  width: 50%;
-}
-.event-more-offers__description .text {
-  font-size: 20px;
-  line-height: 150%;
-  margin-bottom: 18px;
-}
-.event-more-offers__description .sub-info {
-  line-height: 150%;
-  padding-left: 16px;
-  position: relative;
-}
-.event-more-offers__description .sub-info::before {
-  content: "";
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  height: 100%;
-  width: 2px;
-  background-color: #CACAF0;
-  border-radius: 5px;
-}
-.event-more-offers__buttons {
-  max-width: 280px;
-  width: 100%;
-}
-.event-more-offers__buttons .main_button-color {
-  margin-bottom: 16px;
-}
-/* //Event page more offers */
 /* Reserve Place */
 .reserve-place {
-  background-color: #F0F0FA;
-  padding: 90px 0px 70px;
-  margin-top: 150px;
+  margin-top: 45px;
+  margin-bottom: 150px;
 }
-.reserve-place__wrapper .main-caption-m {
+.reserve-place__wrapper .main-caption-s {
   max-width: 687px;
   margin: 0px auto;
 }
 .reserve-place__list {
   display: flex;
-  margin: 40px -30px 0px 0px;
+  margin: 50px -30px 0px 0px;
 }
 .reserve-place__item {
   width: calc(25% - 30px);
   margin-right: 30px;
-  padding: 16px;
+  padding: 20px;
   border-radius: 30px;
   text-align: center;
   background-color: #ffffff;
-  font-size: 16px;
-  line-height: 150%;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
 }
 .reserve-place__caption {
   font-size: 16px;
-  margin-bottom: 4px;
+  margin-bottom: 10px;
 }
 .reserve-place__price {
   font-weight: 700;
   font-size: 24px;
-  color: #7C85F4;
-  margin-bottom: 8px;
+  color: #5C5DF7;
+  margin-bottom: 20px;
 }
 .reserve-place__text {
-  padding-top: 8px;
-  border-top: 1px solid #C1C7DD;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
   overflow: hidden;
   text-overflow: ellipsis;
-  height: 76px;
+  height: 72px;
 }
-.reserve-place__descrip {
+.reserve-place__container {
   display: flex;
-  justify-content: space-between;
-  margin-top: 80px;
+  margin-top: 95px;
+}
+.reserve-place__main-img {
+  width: 549px;
+  height: 512px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-right: 50px;
+  flex-shrink: 0;
 }
 .reserve-place__descrip__item {
-  width: calc(50% - 15px);
+  margin-bottom: 30px;
+}
+.reserve-place__descrip__item:last-child {
+  margin-bottom: 0px;
 }
 .reserve-place__descrip__img {
   width: 65px;
@@ -2892,7 +2837,7 @@ body {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  margin-bottom: 16px;
+  margin-bottom: 10px;
 }
 .reserve-place__descrip__text p {
   margin-bottom: 20px;
@@ -2902,57 +2847,86 @@ body {
 }
 .reserve-place__descrip__text h5 {
   font-size: 16px;
-  margin-bottom: 7px;
+  margin-bottom: 10px;
 }
 /* /Reserve Place */
-/* Organizer */
-.organizer {
-  margin: 150px 0px;
+/* Photo gallery */
+.photo-gallery {
+  margin-bottom: 150px;
 }
-.organizer__wrapper .main-caption-m {
-  text-align: left;
-}
-.organizer__container {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 32px;
-}
-.organizer__info {
-  width: calc(50% - 15px);
-}
-.organizer__info__caption {
-  font-size: 24px;
-  line-height: 120%;
-  margin-bottom: 16px;
-}
-.organizer__info__list {
-  display: flex;
-  margin-top: 54px;
-  margin-right: -30px;
-}
-.organizer__info__item {
-  width: calc(33.333% - 30px);
+.photo-gallery__wrapper .slider-button:nth-child(1) {
   margin-right: 30px;
 }
-.organizer__info__item .type {
-  font-weight: 800;
-  font-size: 48px;
-  line-height: 20px;
-  margin-bottom: 16px;
+.photo-gallery__sub-info {
+  margin-top: 16px;
+  text-align: center;
 }
-.organizer__info__item .description {
-  line-height: 20px;
+.photo-gallery__list {
+  position: relative;
+  height: 367px;
+  margin-top: 30px;
 }
-.organizer__photos {
-  width: calc(50% - 15px);
+.photo-gallery__item {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  flex-direction: column;
+  max-height: 367px;
+  margin-right: -30px;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.6s, visibility 0s 0.6s;
 }
-.organizer__photo {
-  width: calc(50% - 15px);
-  height: 267px;
+.photo-gallery__item.show {
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.6s, visibility 0s 0s;
 }
-/* //Organizer */
+.photo-gallery__item.show .photo-gallery__item__img {
+  transform: translate(0px, 0px);
+}
+.photo-gallery__item__img {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin-right: 30px;
+  width: 370px;
+  height: 367px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  transform: translateX(-50px);
+  transition: transform 0.6s, box-shadow 0.4s;
+  cursor: pointer;
+}
+.photo-gallery__item__img:nth-child(2) {
+  transform: translateY(-50px);
+}
+.photo-gallery__item__img:nth-child(2),
+.photo-gallery__item__img:nth-child(3) {
+  width: 170px;
+  height: 168px;
+}
+.photo-gallery__item__img:nth-child(3) {
+  margin-top: 30px;
+  transform: translateY(50px);
+}
+.photo-gallery__item__img:nth-child(4) {
+  width: 270px;
+  height: 233px;
+  transform: translateY(-50px);
+}
+.photo-gallery__item__img:nth-child(5) {
+  width: 270px;
+  height: 103px;
+  margin-top: 30px;
+  transform: translateY(50px);
+}
+.photo-gallery__item__img:nth-child(6) {
+  width: 270px;
+  height: 366px;
+  transform: translateX(50px);
+}
 /* Faq */
 .faq {
   margin-bottom: 100px;
@@ -5613,8 +5587,8 @@ body {
   margin-right: 15px;
 }
 .teacher__photo {
-  width: 100px;
-  height: 100px;
+  width: 70px;
+  height: 70px;
   flex-shrink: 0;
   border-radius: 50%;
   background-position: center;
