--- a/less/_main-block.less
+++ b/less/_main-block.less
@@ -1445,6 +1445,10 @@
     font-size: 16px;
     line-height: 18px;
     text-align: center;
+    
+    &.active {
+        color: #0009F7;
+    }
 }
 
 .calendar__table__item-disabled {
@@ -1805,7 +1809,12 @@
 
 .event-page__container {
     position: relative;
-    margin-bottom: 80px;
+    margin-bottom: 75px;
+    
+    .main_button-color {
+        margin: 20px auto 0px;
+        max-width: 250px;
+    }
 }
 
 .about-event__text {
@@ -1880,7 +1889,7 @@
             order: -1;
             text-decoration: line-through;
             color: #4F4F4F;
-            margin-right: 18px;
+            margin-right: 5px;
             color: #5A627C;
         }
     }
@@ -1896,29 +1905,30 @@
 
 .about-teacher {
     display: flex;
-    align-items: center;
-    margin-top: 32px;
+    margin-top: 30px;
     max-width: 600px;
 }
 
 .about-teacher__info {
-    margin-left: 16px;
+    margin-left: 20px;
     font-size: 16px;
     line-height: 150%;
 }
 
 .about-teacher__name {
-    margin-bottom: 8px;
+    font-size: 16px;
+    margin-bottom: 15px;
 }
 
 .about-teacher__sub {
-    margin-bottom: 9px;
+    line-height: 130%;
+    margin-bottom: 10px;
 }
 
 /* Program event */
 
 .program-event {
-    margin-top: 150px;
+    margin-top: 75px;
 }
 
 .program-event__container {
@@ -1926,21 +1936,22 @@
     margin-top: 40px;
 }
 
+.program-event__calendar {
+    max-width: 290px;
+}
+
 .program-event__calendar-info {
-    margin-top: 32px;
-    line-height: 150%;
+    margin-top: 30px;
     
     .date {
         font-size: 18px;
         color: #0009F7;
-        margin-bottom: 8px;
+        margin-bottom: 20px;
     }
 }
 
 .program-event__description-item {
     display: flex;
-    align-items: center;
-    font-size: 16px;
     margin-bottom: 16px;
     
     &:last-child {
@@ -1949,40 +1960,36 @@
     
     .type {
         margin-right: 16px;
+        white-space: nowrap;
     }
 }
 
 .program-event__info {
-    max-width: 750px;
-    margin-left: 30px;
-}
-
-.program-event__list {
+    max-width: 790px;
+    margin-left: 50px;
     padding-left: 30px;
     border-left: 1px solid #C1C7DD;
 }
 
 .program-event__item {
-    font-size: 16px;
-    line-height: 150%;
-    margin-bottom: 24px;
+    margin-bottom: 30px;
     
     &:last-child {
         margin-bottom: 0px;
     }
 
     h5 {
-        margin-bottom: 8px;
+        margin-bottom: 10px;
         font-size: 16px;
-        line-height: 140%;
+        line-height: 150%;
     }
     
     ul {
-        margin-top: 24px 0px;
+        margin: 20px 0px 30px;
         
         li {
-            padding-left: 24px;
-            margin-bottom: 24px;
+            padding-left: 18px;
+            margin-bottom: 10px;
             position: relative;
             
             &:last-child {
@@ -1993,10 +2000,9 @@
                 content: "";
                 position: absolute;
                 left: 0px;
-                top: 5px;
-                width: 8px;
-                height: 8px;
-                border-radius: 50%;
+                top: 8px;
+                width: 6px;
+                height: 6px;
                 background-color: #5C5DF7;
             }
         }
@@ -2006,15 +2012,14 @@
 .program-event__buttons {
     display: flex;
     justify-content: space-between;
-    margin-top: 55px;
+    margin-top: 40px;
     
-    .main_button-color {
-        max-width: 240px;
-        text-decoration: none;
+    .main-button-shadow {
+        max-width: 236px;
     }
     
     .icon {
-        padding-right: 8px;
+        padding-right: 10px;
     }
 }
 
@@ -2026,16 +2031,25 @@
     margin-top: 150px;
 }
 
-.event-page__receive__list {
+.event-page__receive__container {
     display: flex;
-    margin-top: 72px;
-    margin-right: -30px;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.event-page__receive__list {
+    margin-top: 20px;
+    width: 50%;
+    flex-shrink: 0;
 }
 
 .event-page__receive__item {
     display: flex;
-    width: calc(33.333% - 30px);
-    margin-right: 30px;
+    margin-bottom: 40px;
+    
+    &:last-child {
+        margin-bottom: 0px;
+    }
 }
 
 .receive__img {
@@ -2048,64 +2062,23 @@
 }
 
 .event-page__receive__info {
-    margin-left: 16px;
+    margin-left: 20px;
     
     .type {
         font-size: 16px;
+        line-height: 130%;
         margin-bottom: 8px;
     }
 }
 
-.event-page__receive__description {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 55px;
-}
-
-.receive__description__list {
-    width: calc(50% - 15px);
-}
-
-.receive__description__item {
-    padding-left: 24px;
-    margin-bottom: 32px;
-    position: relative;
-    
-    &:last-child {
-        margin-bottom: 0px;
-    }
-    
-    &::before {
-        content: "";
-        position: absolute;
-        left: 0px;
-        top: 5px;
-        width: 8px;
-        height: 8px;
-        border-radius: 50%;
-        background-color: #5C5DF7;
-    }
-}
-
-.receive__description__info {
-    width: calc(50% - 15px);
-    background: #FFFFFF;
-    border-radius: 30px;
-    padding: 30px;
-    
-    .receive__img {
-        margin-bottom: 16px;
-    }
-    
-    p {
-        margin-bottom: 10px;
-        
-        &:last-child {
-            margin-top: 20px;
-            margin-bottom: 0px;
-        }
-    }
+.event-page__receive__img {
+    width: 680px;
+    height: 439px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-left: 50px;
+    flex-shrink: 0;
 }
 
 /* //Event page receive */
@@ -2171,64 +2144,16 @@
 
 /* //Event page timer */
 
-/* Event page more offers */
-
-.event-more-offers {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 150px;
-    padding: 55px;
-    border-radius: 30px;
-    background-color: #F0F0FA;
-}
-
-.event-more-offers__description {
-    width: 50%;
-    .text {
-        font-size: 20px;
-        line-height: 150%;
-        margin-bottom: 18px;
-    }
-    
-    .sub-info {
-        line-height: 150%;
-        padding-left: 16px;
-        position: relative;
-        
-        &::before {
-            content: "";
-            position: absolute;
-            left: 0px;
-            top: 0px;
-            height: 100%;
-            width: 2px;
-            background-color: #CACAF0;
-            border-radius: 5px;
-        }
-    }
-}
-
-.event-more-offers__buttons {
-    max-width: 280px;
-    width: 100%;
-    
-    .main_button-color {
-        margin-bottom: 16px;
-    }
-}
-
-/* //Event page more offers */
 
 /* Reserve Place */
 
 .reserve-place {
-    background-color: #F0F0FA;
-    padding: 90px 0px 70px;
-    margin-top: 150px;
+    margin-top: 45px;
+    margin-bottom: 150px;
 }
 
 .reserve-place__wrapper {
-    .main-caption-m {
+    .main-caption-s {
         max-width: 687px;
         margin: 0px auto;
     }
@@ -2236,51 +2161,61 @@
 
 .reserve-place__list {
     display: flex;
-    margin: 40px -30px 0px 0px;
+    margin: 50px -30px 0px 0px;
 }
 
 .reserve-place__item {
     width: calc(25% - 30px);
     margin-right: 30px;
-    padding: 16px;
+    padding: 20px;
     border-radius: 30px;
     text-align: center;
     background-color: #ffffff;
-    font-size: 16px;
-    line-height: 150%;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
 }
 
 .reserve-place__caption {
     font-size: 16px;
-    margin-bottom: 4px;
+    margin-bottom: 10px;
 }
 
 .reserve-place__price {
     font-weight: 700;
     font-size: 24px;
-    color: #7C85F4;
-    margin-bottom: 8px;
+    color: #5C5DF7;
+    margin-bottom: 20px;
 }
 
 .reserve-place__text {
-    padding-top: 8px;
-    border-top: 1px solid #C1C7DD;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3;
     overflow: hidden;
     text-overflow: ellipsis;
-    height: 76px;
+    height: 72px;
 }
 
-.reserve-place__descrip {
+.reserve-place__container {
     display: flex;
-    justify-content: space-between;
-    margin-top: 80px;
+    margin-top: 95px;
+}
+
+.reserve-place__main-img {
+    width: 549px;
+    height: 512px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-right: 50px;
+    flex-shrink: 0;
 }
 
 .reserve-place__descrip__item {
-    width: calc(50% - 15px);
+    margin-bottom: 30px;
+    
+    &:last-child {
+        margin-bottom: 0px;
+    }
 }
 
 .reserve-place__descrip__img {
@@ -2289,7 +2224,7 @@
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
-    margin-bottom: 16px;
+    margin-bottom: 10px;
 }
 
 .reserve-place__descrip__text {
@@ -2303,74 +2238,108 @@
     
     h5 {
         font-size: 16px;
-        margin-bottom: 7px;
+        margin-bottom: 10px;
     }
 }
 
 /* /Reserve Place */
 
-/* Organizer */
+/* Photo gallery */
 
-.organizer {
-    margin: 150px 0px;
+.photo-gallery {
+    margin-bottom: 150px;
 }
 
-.organizer__wrapper {
-    .main-caption-m {
-        text-align: left;
+.photo-gallery__wrapper {
+    .slider-button {
+        &:nth-child(1) {
+            margin-right: 30px;
+        }
     }
 }
 
-.organizer__container {
+.photo-gallery__sub-info {
+    margin-top: 16px;
+    text-align: center;
+}
+
+.photo-gallery__list {
+    position: relative;
+    height: 367px;
+    margin-top: 30px;
+}
+
+.photo-gallery__item {
     display: flex;
-    justify-content: space-between;
-    margin-top: 32px;
-}
-
-.organizer__info {
-    width: calc(50% - 15px);
-}
-
-.organizer__info__caption {
-    font-size: 24px;
-    line-height: 120%;
-    margin-bottom: 16px;
-}
-
-.organizer__info__list {
-    display: flex;
-    margin-top: 54px;
+    flex-wrap: wrap;
+    flex-direction: column;
+    max-height: 367px;
     margin-right: -30px;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity .6s, visibility 0s .6s;
+    
+    &.show {
+        opacity: 1;
+        visibility: visible;
+        transition: opacity .6s, visibility 0s 0s;
+        
+        .photo-gallery__item__img {
+            transform: translate(0px, 0px);
+        }
+    }
 }
 
-.organizer__info__item {
-    width: calc(33.333% - 30px);
+.photo-gallery__item__img {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     margin-right: 30px;
+    width: 370px;
+    height: 367px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    transform: translateX(-50px);
+    transition: transform .6s, box-shadow .4s;
+    cursor: pointer;
     
-    .type {
-        font-weight: 800;
-        font-size: 48px;
-        line-height: 20px;
-        margin-bottom: 16px;
+    &:nth-child(2) {
+        transform: translateY(-50px);
     }
     
-    .description {
-        line-height: 20px;
+    &:nth-child(2),
+    &:nth-child(3) {
+        width: 170px;
+        height: 168px;
+    }
+    
+    &:nth-child(3) {
+        margin-top: 30px;
+        transform: translateY(50px);
+    }
+    
+    &:nth-child(4) {
+        width: 270px;
+        height: 233px;
+        transform: translateY(-50px);
+    }
+    
+    &:nth-child(5) {
+        width: 270px;
+        height: 103px;
+        margin-top: 30px;
+        transform: translateY(50px);
+    }
+    
+    &:nth-child(6) {
+        width: 270px;
+        height: 366px;
+        transform: translateX(50px);
     }
 }
 
-.organizer__photos {
-    width: calc(50% - 15px);
-    display: flex;
-    justify-content: space-between;
-}
-
-.organizer__photo {
-    width: calc(50% - 15px);
-    height: 267px;
-}
-
-/* //Organizer */
 
 /* Faq */
 
